Deployments/sqlconnectarcapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app: sqlconnectarcapp-deploy
  name: sqlconnectarcapp-deploy
  namespace: apis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlconnectarcapp-deploy  
  template:
    metadata:      
      labels:
        app: sqlconnectarcapp-deploy
    spec:
      containers:
      - image: aksk8sacr.azurecr.io/sqlconnectarcapp:v1.0.1
        name: sqlconnectarcapp
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.5"
            memory: 250Mi
          limits:
            cpu: "1"
            memory: 500Mi
        volumeMounts:
        - name: arcaks-secret-volume
          mountPath: "/mnt/secrets-store"
          readOnly: true
      nodeSelector:
        agentpool: apinodepool
      volumes:
      - name: arcaks-secret-volume
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: arcaks-secret-provider
          nodePublishSecretRef:
            name: secrets-store-creds
---
apiVersion: v1
kind: Service
metadata:  
  labels:
    app: sqlconnectarcapp-deploy
  name: sqlconnectarcapp-svc
  namespace: apis
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sqlconnectarcapp-deploy
  type: ClusterIP
