Deployments/arc-aks-apis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arc-aks-apis-ingress
  namespace: apis
  annotations:
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - "*.<dns-name>"
    secretName: api-arc-tls-secret
  rules:
  - host: apiarc.<dns-name>
    http:
      paths:
      - path: /sql/?(.*)
        pathType: Prefix
        backend:
          service:
            name: sqlconnectarcapp-svc
            port:
              number: 80
